First draft of server assembly script